# PathTracking

./: CMakeLists.txt  README.md  build.sh  main.cpp
CrowdNavigation/: CMakeLists.txt  CrowdNavigation.sln  CrowdNavigation.vcxproj  PathFinding.cpp  PathFinding.h  main.cpp  makefile
src/LQR/: LQR.cpp  LQR.h
src/PID/: PID.cpp  PID.h
src/spline/: Spline.cpp  Spline.h
